@@ -3,9 +3,13 @@
     * The definition of the defined method in the Sys::OS class is changed.
       [Before]
       static method defined : int ($macro_name : string, $value = undef : object of Int|Long|Double);
-      
       [After]
       static method defined : int ($macro_name : string, $value_ref = undef : object of int[]|long[]|double[])
+    * The definition of the ioctl method in the Sys::Ioctl class is changed.
+      [Before]
+      static method ioctl : int ($fd : int, $request : int, $request_arg = undef : object of Byte|Short|Int|Long|Float|Double|object);
+      [After]
+      static method ioctl : int ($fd : int, $request : int, $request_arg_ref = undef : object of byte[]|short[]|int[]|long[]|float[]|double[]|object);
 
 0.481 2023-05-08
   [New Features]
